--- a/.env.development
+++ b/.env.development
@@ -1,4 +1,16 @@
-# 变量必须以 VITE_ 为前缀才能暴露给外部读取
-VITE_APP_TITLE = 'vue3-element'
+## 开发环境
+NODE_ENV='development'
+
+# 应用端口
 VITE_APP_PORT = 5173
+
+# 代理前缀
 VITE_APP_BASE_API = '/dev-api'
+
+# 线上接口地址
+VITE_APP_API_URL = http://vapi.youlai.tech
+# 开发接口地址
+# VITE_APP_API_URL = http://localhost:8989
+
+# 是否启用 Mock 服务
+VITE_MOCK_DEV_SERVER = false
