--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@types/node": "^20.12.7",
     "@types/nprogress": "^0.2.3",
     "@vitejs/plugin-vue": "^5.0.4",
+    "@types/path-browserify": "^1.0.2",
     "fast-glob": "^3.3.2",
     "sass": "^1.75.0",
     "typescript": "^5.2.2",
