--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "element-plus": "^2.7.1",
     "nprogress": "^0.2.0",
     "path-browserify": "^1.0.1",
+    "path-to-regexp": "^6.2.2",
     "pinia": "^2.1.7",
     "vue": "^3.4.21",
     "vue-i18n": "^9.13.1",
@@ -24,8 +25,8 @@
     "@iconify-json/ep": "^1.1.15",
     "@types/node": "^20.12.7",
     "@types/nprogress": "^0.2.3",
-    "@vitejs/plugin-vue": "^5.0.4",
     "@types/path-browserify": "^1.0.2",
+    "@vitejs/plugin-vue": "^5.0.4",
     "fast-glob": "^3.3.2",
     "sass": "^1.75.0",
     "typescript": "^5.2.2",
